# HROOT

./: .buildinfo  HROOT-generate.cabal  HROOT.conf  HROOT.nix  README.md  config.nix  config2.nix  default.nix  devshell.nix  flake.nix  gen.nix  genindex.html  index.html  objects.inv  run.nix  runshell.nix  search.html  searchindex.js  shell.nix  test.hs  use.nix
HROOT-generate/: HROOT-generate.cabal  HROOT.conf
HROOT-generate/app/: HROOT-generate.hs
HROOT-generate/exe/: HROOT-generate.hs
HROOT-generate/lib/HROOT/Data/Core/: Class.hs
HROOT-generate/lib/HROOT/Data/Graf/: Annotate.hs  Class.hs
HROOT-generate/lib/HROOT/Data/Hist/: Class.hs
HROOT-generate/lib/HROOT/Data/IO/: Annotate.hs  Class.hs
HROOT-generate/lib/HROOT/Data/Math/: Annotate.hs  Class.hs
HROOT-generate/lib/HROOT/Data/Net/: Class.hs
HROOT-generate/lib/HROOT/Data/RooFit/: Class.hs
HROOT-generate/lib/HROOT/Data/RooFit/RooStats/: Class.hs
HROOT-generate/lib/HROOT/Data/Tree/: Annotate.hs  Class.hs
HROOT-generate/src/HROOT/Data/Core/: Class.hs
HROOT-generate/src/HROOT/Data/Graf/: Class.hs
HROOT-generate/src/HROOT/Data/Hist/: Class.hs
HROOT-generate/src/HROOT/Data/IO/: Class.hs
HROOT-generate/src/HROOT/Data/Math/: Class.hs
HROOT-generate/src/HROOT/Data/Net/: Class.hs
HROOT-generate/src/HROOT/Data/RooFit/: Class.hs
HROOT-generate/src/HROOT/Data/RooFit/RooStats/: Class.hs
HROOT-generate/src/HROOT/Data/Tree/: Class.hs
HROOT-generate/template/: CHANGES  Config.hs  README.md  Setup.hs
HROOT-generate/template/HROOT-RooFit/: Config.hs  Setup.lhs
HROOT-generate/template/HROOT-RooFit-RooStats/: Config.hs  Setup.lhs
HROOT-generate/template/HROOT-math/example/: datetime.hs  histadd.hs  project1d.hs  random1d.hs  random2d.hs  random2dApp.hs  saveAsROOT.hs  variablebins.hs
HROOT-generate/template/HROOT/example/: datetime.hs  histadd.hs  project1d.hs  random1d.hs  random2d.hs  random2dApp.hs  saveAsROOT.hs  treetest.hs  variablebins.hs
_static/: documentation_options.js
docs/: conf.py  index.rst
examples/: datetime.hs  gas.hs  graph2d.hs  httpserver.hs  palette.hs  random1d.hs  random2d.hs  random2dApp.hs  random2dApp_multithread.hs  random2dApp_panel.hs
examples/gas/: gas.hs
exe/: Command.hs  HROOT-generate.hs
lib/HROOT/Data/Core/: Annotate.hs  Class.hs  Module.hs  ROOT.hs  ROOTAnnotate.hs  ROOTAnnotatesmall.hs  ROOTModulesmall.hs  ROOTsmall.hs
lib/HROOT/Data/Core/Full/: ROOT.hs  ROOTModule.hs
lib/HROOT/Data/Graf/: Annotate.hs  Class.hs
lib/HROOT/Data/Hist/: Annotate.hs  Class.hs  Module.hs
lib/HROOT/Data/IO/: Annotate.hs  Class.hs
lib/HROOT/Data/Math/: Annotate.hs  Class.hs
lib/HROOT/Data/RooFit/: Annotate.hs  Class.hs  Module.hs
lib/HROOT/Data/RooFit/RooStats/: Class.hs
lib/HROOT/Data/Tree/: Annotate.hs  Class.hs
lib/HROOT/Generate/: MakePkg.hs  ROOT.hs  ROOTAnnotate.hs  ROOTAnnotatesmall.hs  ROOTsmall.hs
nix/: HROOT.nix  config-stdcxx.nix  config.nix  pinned.nix
nix/old/: default.nix
template/: HROOT.cabal.st
template/HROOT/: Config.hs  README.md
template/HROOT-RooFit/: Config.hs
template/HROOT-RooFit-RooStats/: Setup.lhs
template/HROOT-core/: CHANGES
template/HROOT-core/example/: project1d.hs
template/HROOT-hist/example/: saveAsROOT.hs
template/HROOT-math/: README.md
template/HROOT-tree/: CHANGES  Setup.lhs
template/HROOT/example/: datetime.hs  histadd.hs  project1d.hs  random2d.hs  random2dApp.hs  treetest.hs
workspace/: DepGraph.hs  build.sh  build_old.sh  cabal.project  datetime.hs  gas.hs  graph2d.hs  httpserver.hs  random1d.hs  random2d.hs  random2dApp.hs  random2dApp_multithread.hs  random2dApp_panel.hs
workspace2/: cabal.project
