Name:		HROOT-generate
Version:	0.7.999
Synopsis:	automatic HROOT binding generation
Description: 	automatic HROOT binding generation 
License:        GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
Data-files:     template/HROOT-core/Config.hs
                template/HROOT-core/LICENSE
                template/HROOT-core/Setup.lhs
                template/HROOT-hist/Config.hs
                template/HROOT-hist/LICENSE
                template/HROOT-hist/Setup.lhs
                template/HROOT-graf/Config.hs
                template/HROOT-graf/LICENSE
                template/HROOT-graf/Setup.lhs
                template/HROOT-math/Config.hs
                template/HROOT-math/LICENSE
                template/HROOT-math/Setup.lhs
                template/HROOT-io/Config.hs
                template/HROOT-io/LICENSE
                template/HROOT-io/Setup.lhs
                template/HROOT/CHANGES
                template/HROOT/Config.hs
                template/HROOT/LICENSE
                template/HROOT/README.md 
                template/HROOT/Setup.lhs
                template/HROOT/example/*.hs

Executable HROOT-generate
  Main-is: HROOT-generate.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, 
                 mtl>2, 
                 containers, 
                 filepath>1, 
                 directory, 
                 process, 
                 HStringTemplate, 
                 split,
                 configurator >= 0.2,
                 cmdargs, 
                 transformers, 
                 template-haskell,
                 Cabal,
                 fficxx,
                 unordered-containers, 
                 HROOT-generate
  Other-Modules: Command

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, 
                 mtl>2,
                 containers, 
                 filepath>1, 
                 directory, 
                 process, 
                 HStringTemplate, 
                 split,
                 cmdargs, 
                 transformers, 
                 template-haskell, 
                 Cabal, 
                 fficxx, 
                 unordered-containers

  Exposed-Modules: 
                   HROOT.Generate.MakePkg 
                   HROOT.Data.Core.Annotate 
                   HROOT.Data.Core.Class 
                   HROOT.Data.Hist.Annotate
                   HROOT.Data.Hist.Class
                   HROOT.Data.Graf.Annotate
                   HROOT.Data.Graf.Class
                   HROOT.Data.Math.Annotate
                   HROOT.Data.Math.Class
                   HROOT.Data.IO.Annotate
                   HROOT.Data.IO.Class
                   
  Other-Modules: 
                   Paths_HROOT_generate


                   -- HROOT.Data.Core.ROOT
                   -- HROOT.Data.Core.ROOTAnnotate
                   -- HROOT.Data.Core.ROOTModule
                   -- HROOT.Data.Core.Module 
                   -- HROOT.Data.Hist.Module 
