Name:		HROOT-generate
Version:	0.8.999
Synopsis:	automatic HROOT binding generation
Description: 	automatic HROOT binding generation 
License:        LGPL-2.1
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
Data-files:     
                template/HROOT-core/CHANGES
                template/HROOT-core/Config.hs
                template/HROOT-core/LICENSE
                template/HROOT-core/Setup.lhs
                template/HROOT-hist/CHANGES
                template/HROOT-hist/Config.hs
                template/HROOT-hist/LICENSE
                template/HROOT-hist/Setup.lhs
                template/HROOT-graf/CHANGES
                template/HROOT-graf/Config.hs
                template/HROOT-graf/LICENSE
                template/HROOT-graf/Setup.lhs
                template/HROOT-math/CHANGES
                template/HROOT-math/Config.hs
                template/HROOT-math/LICENSE
                template/HROOT-math/Setup.lhs
                template/HROOT-io/CHANGES
                template/HROOT-io/Config.hs
                template/HROOT-io/LICENSE
                template/HROOT-io/Setup.lhs
                template/HROOT-RooFit/CHANGES
                template/HROOT-RooFit/Config.hs
                template/HROOT-RooFit/LICENSE
                template/HROOT-RooFit/Setup.lhs
                template/HROOT-RooFit-RooStats/CHANGES
                template/HROOT-RooFit-RooStats/Config.hs
                template/HROOT-RooFit-RooStats/LICENSE
                template/HROOT-RooFit-RooStats/Setup.lhs
                template/HROOT-tree/CHANGES
                template/HROOT-tree/Config.hs
                template/HROOT-tree/LICENSE
                template/HROOT-tree/Setup.lhs
                template/HROOT/CHANGES
                template/HROOT/Config.hs
                template/HROOT/LICENSE
                template/HROOT/README.md 
                template/HROOT/Setup.lhs
                template/HROOT/example/*.hs

Executable HROOT-generate
  Main-is: HROOT-generate.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4,
                 Cabal,
                 cmdargs,
                 configurator >= 0.2,
                 containers, 
                 directory,
                 fficxx >= 0.2.999,
                 filepath>1, 
                 mtl>2, 
                 process, 
                 split,
                 template,
                 template-haskell,
                 transformers,
                 unordered-containers,
                 --
                 HROOT-generate
                 
  Other-Modules: Command

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4,
                 Cabal,
                 cmdargs, 
                 containers,
                 directory, 
                 fficxx >= 0.2.999, 
                 filepath>1,
                 haskell-src-exts,
                 mtl>2,
                 process, 
                 split,
                 template-haskell,
                 text,
                 transformers, 
                 unordered-containers

  Exposed-Modules: 
                   HROOT.Generate.MakePkg 
                   HROOT.Data.Core.Annotate 
                   HROOT.Data.Core.Class 
                   HROOT.Data.Hist.Annotate
                   HROOT.Data.Hist.Class
                   HROOT.Data.Graf.Annotate
                   HROOT.Data.Graf.Class
                   HROOT.Data.Math.Annotate
                   HROOT.Data.Math.Class
                   HROOT.Data.IO.Annotate
                   HROOT.Data.IO.Class
                   HROOT.Data.RooFit.Annotate
                   HROOT.Data.RooFit.Class
                   HROOT.Data.RooFit.RooStats.Class
                   HROOT.Data.Tree.Annotate
                   HROOT.Data.Tree.Class
                   
  Other-Modules: 
                   Paths_HROOT_generate

