Cabal-Version:  3.0
Name:		HROOT-generate
Version:	0.10.0.2
Synopsis:	automatic HROOT binding generation
Description: 	automatic HROOT binding generation
License:        LGPL-2.1-or-later
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Data-files:
                template/common/CHANGES
                template/common/Config.hs
                template/common/LICENSE
                template/common/Setup.hs
                template/common/README.md

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -Werror -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  Build-Depends: base>4,
                 Cabal,
                 cmdargs,
                 containers,
                 directory,
                 fficxx >= 0.7,
                 fficxx-runtime >= 0.7,
                 filepath>1,
                 haskell-src-exts,
                 mtl>2,
                 process,
                 split,
                 template-haskell,
                 text,
                 transformers,
                 unordered-containers

  Exposed-Modules:
                   HROOT.Data.Core.Class
                   HROOT.Data.Hist.Class
                   HROOT.Data.Graf.Class
                   HROOT.Data.Math.Class
                   HROOT.Data.Net.Class
                   HROOT.Data.IO.Class
                   HROOT.Data.RooFit.Class
                   HROOT.Data.RooFit.RooStats.Class
                   HROOT.Data.Tree.Class
  Other-Modules:
                   Paths_HROOT_generate

Executable HROOT-generate
  Main-is: HROOT-generate.hs
  hs-source-dirs: app
  ghc-options: 	-Wall -Werror -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  Build-Depends: array,
                 base>4,
                 Cabal,
                 containers,
                 directory,
                 fficxx >= 0.7,
                 filepath>1,
                 mtl>2,
                 optparse-applicative,
                 process,
                 split,
                 template,
                 template-haskell,
                 text,
                 transformers,
                 unordered-containers,
                 --
                 HROOT-generate
  Other-Modules:
                 Paths_HROOT_generate
